--- a/package.json
+++ b/package.json
@@ -44,3 +44,9 @@
     "tailwindcss": "^3.4.15"
   }
 }
+{
+  "dependencies": {
+    "react-router-dom": "^6.x.x",
+    // ... autres dépendances existantes
+  }
+}
